test/sema/var_decl.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn foo(): void {}
fn bar(): number { return 1.0; }

fn main(): void {
    // CHECK: [[# @LINE + 1 ]]:9: error: a variable of 'void' type is not allowed
    mut x: void;

    // CHECK: [[# @LINE + 1 ]]:13: error: failed to resolve type 'customType'
    mut x2: customType;
    
    // CHECK: [[# @LINE + 1 ]]:25: error: an expression of type 'void' cannot be used to initialize a variable of type 'number'
    let x3: number = foo();

    let x4: number;
    
    let x5: number = bar();

    // CHECK: [[# @LINE + 1 ]]:22: error: symbol 'y' not found
    let x6: number = y;
}
